mrec to nano post

--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -1,5 +1,5 @@
 .row-fluid.sidebar
-  = image_tag("https://upload.wikimedia.org/wikipedia/commons/0/0a/YurisNight_300x250.png")
+  = link_to image_tag("mrec.jpg"), '/posts/smilekuxnano'
   %hr
   .twitter-box
     %a.twitter-timeline{"data-widget-id" => "395068179950473216", :href => "https://twitter.com/smilekus"} Tweets by @smilekus
