ku cover preview method

--- a/app/views/stories/index.html.haml
+++ b/app/views/stories/index.html.haml
@@ -10,7 +10,7 @@
         - @kus.each do |k|
           .row-fluid
             .span1
-              %h5= link_to image_tag(k.story.large_cover.preview), ku_path(k)
+              %h5= link_to image_tag(k.cover_preview), ku_path(k)
             .span10.row10
               %p= "#{link_to k.body.truncate(180), ku_path(k)} written #{time_ago_in_words(k.created_at)} ago".html_safe
           %hr.short-hr
