--- a/app/views/stories/index.html.haml
+++ b/app/views/stories/index.html.haml
@@ -8,6 +8,7 @@
       .row-fluid
         %h2 Recent Kus
         - @kus.each do |k|
+          .row-fluid
             .span1
               %h5= link_to image_tag("#{k.cover_preview}"), ku_path(k)
             .span10.row10
