Comments and minor code suggestion improvements.

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,3 +1,4 @@
+/ I'm not sure how "posts" are used, but you should move a lot of this logic into the post_controller.
 .container
 	%section.ui-index
 		%ul
