--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -1,12 +1,12 @@
 %section.container
 	.row-fluid
-		.span5
+		.span4
 			.row-fluid
 				%h2= @story.title
 			.row-fluid
 				= image_tag @story.large_cover
 				.well.row10= @description.html_safe
-		.span7
+		.span7.offset1
 			.row-fluid
 				%h3= "#{@kus.count} Kus since #{@story.created_at.strftime('%B %Y')}"
 				- @kus.each do |k|
