add metamagic and title tags

--- a/app/views/invites/new.html.haml
+++ b/app/views/invites/new.html.haml
@@ -1,3 +1,4 @@
+- meta :title => "Invite a friend to Smileku!", :description => "Collaboration is better with friends."
 %section.invite.container
   .row
     .span6.offset1
