--- a/app/views/kus/new.html.haml
+++ b/app/views/kus/new.html.haml
@@ -1,3 +1,4 @@
+- meta :title => "Write something awesome - Smileku", :description => "Keep the story going by adding your part."
 %section.container
 	.row
 		.span5
