--- a/app/views/kus/show.html.haml
+++ b/app/views/kus/show.html.haml
@@ -1,3 +1,4 @@
+- meta :title => "#{@story.title} - Ku Number #{@ku.number_in_story}", :description => "#{@ku.user.username}'s addition to #{@story.title}. #{@story.description}"
 %section.container
 	.row
 		.span5
