--- a/app/views/stories/index.html.haml
+++ b/app/views/stories/index.html.haml
@@ -1,3 +1,4 @@
+- meta :title => "Smileku Recent Stories and Kus", :description => "The latest kus and stories written by Smileku writers."
 %section.container-fluid
   .row-fluid
     .span9
