--- a/app/views/stories/new.html.haml
+++ b/app/views/stories/new.html.haml
@@ -1,3 +1,4 @@
+- meta :title => "Write something awesome - Smileku", :description => "Start a new collaborative story."
 %section.container
 	.row-fluid
 		%ul.nav.nav-tabs
