--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -1,3 +1,4 @@
+- meta :title => "#{@story.title} - a story by #{@story.user.username}", :description => "#{@story.description}"
 %section.container
 	.row-fluid
 		.span4
