--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,3 +1,4 @@
+- meta :title => "Create your Smileku account", :description => "Join Smileku and create stories with other writers."
 %section.sign_in.container
   .row
     .span10.offset1
