--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smileku - Infinite Stories</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <%= metamagic :title => "Smileku - Infinite Stories", :description => "A community for writers to come together and collaborate on stories." %>
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
