require admin spec shared example

--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -7,5 +7,6 @@
 			=f.text_field :title, class: "span7"
 			=f.text_area :text, class: "span7", rows: 15
 			=f.file_field :header, label: "Header Image"
+			=f.text_field :photo_link, class: "span7"
 			=f.file_field :mrec, label: "Preview Image"
 			=f.submit "Publish", class: "btn"
