change text in glyphicons

--- a/app/views/stories/index.html.haml
+++ b/app/views/stories/index.html.haml
@@ -4,8 +4,8 @@
     .span9
       .row-fluid
         %ul.nav.nav-tabs
-          %li.activities.active= link_to '<i class="icon-book"> Read</i>'.html_safe, '#'
-          %li.activities= link_to '<i class="icon-pencil"> Write</i>'.html_safe, new_story_path
+          %li.activities.active= link_to '<i class="icon-book"></i> Read'.html_safe, '#'
+          %li.activities= link_to '<i class="icon-pencil"></i> Write'.html_safe, new_story_path
       .row-fluid
         %h2 Recent Kus
         - @kus.each do |k|
