--- a/app/views/stories/new.html.haml
+++ b/app/views/stories/new.html.haml
@@ -2,8 +2,8 @@
 %section.container
 	.row-fluid
 		%ul.nav.nav-tabs
-			%li.activities=link_to '<i class="icon-book"> Read</i>'.html_safe, stories_path
-			%li.activities.active= link_to '<i class="icon-pencil"> Write</i>'.html_safe, '#'
+			%li.activities=link_to '<i class="icon-book"></i> Read'.html_safe, stories_path
+			%li.activities.active= link_to '<i class="icon-pencil"></i> Write'.html_safe, '#'
 	.row.span12
 		%header
 			%h2 Start a new story 
