--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -6,12 +6,12 @@
           %h1 Update Your Information
         %br
         %fieldset
-          =f.file_field :photo, label: "Profile photo"
+          =image_tag @user.photo.preview
+          =f.file_field :photo, label: "Change profile photo"
           =f.text_area :bio, label: "Tell people about yourself", class: "span5", rows: 6
           =f.text_field :website, label: "Your website"
           =f.text_field :location, label: "Where do you live?"
           =f.text_field :email, label: "Update your email"
-          = f.password_field :password, label: "Enter password to save"
         .controls
           = f.submit "Update", class: 'btn'
           = link_to "Cancel", user_path(@user)
