wire following buttons

--- a/app/views/ui/ku_show.html.haml
+++ b/app/views/ui/ku_show.html.haml
@@ -10,6 +10,7 @@
 			.row
 				%h3
 					KU#5 by Dude
+					=link_to 'Follow', '#', class: 'btn btn-info'
 			.row
 				.well
 					Nunc quis cursus tellus, eu tincidunt augue. Proin eget iaculis nibh. Sed consectetur tincidunt erat, quis rutrum neque eleifend non...
