--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -6,6 +6,7 @@
 				=image_tag @user.photo.normal
 				%h1
 					= @user.username
+					= render 'follow_form'
 					- if current_user.present? && current_user.id == @user.id
 						=link_to 'Edit Profile', edit_user_path(@user), class: 'btn btn-mini'
 				%h5= @user.location
