wire new profile show

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -50,3 +50,11 @@ body {
   text-align: center;
   padding-top: 45px;
 }
+
+.no-space {
+  margin-left: 0 !important;
+}
+
+.short-hr {
+  margin: 1px 0;
+}
