wire story listing buttons

--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -4,6 +4,7 @@
 		.span4
 			.row-fluid
 				%h2= @story.title
+				= render 'listing_form'
 			.row-fluid
 				= image_tag @story.large_cover
 				.well.row10= @description.html_safe
