--- a/app/views/stories/_list.html.haml
+++ b/app/views/stories/_list.html.haml
@@ -1,3 +1,4 @@
 = form_for @story.listings.build(:user_id => current_user.id) do |f|
 	= f.hidden_field :user_id
-	=f.submit 'add to list', class: 'btn btn-info'
+	= f.hidden_field :story_id, value: @story.id
+	= f.submit 'add to list', class: 'btn btn-info'
