--- a/app/views/stories/_unlist.html.haml
+++ b/app/views/stories/_unlist.html.haml
@@ -1,2 +1,3 @@
 = form_for @story.listings.find_by_user_id(current_user.id), html: { method: :delete } do |f|
+	= f.hidden_field :story_id, value: @story.id
 	= f.submit 'remove from list', class: 'btn btn-success'
