setup twitter share on kus

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,5 +33,6 @@
       </div> <!--! end of .container -->
     </div> <!--! end of #main -->
     <%= render 'layouts/ga' if Rails.env.production? %>
+    <%= render 'layouts/twitter' %>
   </body>
 </html>
