--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,5 +34,6 @@
     </div> <!--! end of #main -->
     <%= render 'layouts/ga' if Rails.env.production? %>
     <%= render 'layouts/twitter' %>
+    <%= render 'layouts/facebook' %>
   </body>
 </html>
