--- a/app/views/kus/_social_buttons.html.haml
+++ b/app/views/kus/_social_buttons.html.haml
@@ -1,3 +1,3 @@
 .row-fluid
-	%a.twitter-share-button{"data-count" => "vertical", "data-text" => "#{@story.title} number #{@ku.number_in_story} by #{@ku.author_name}", "data-via" => "smilekus", "data-lang" => "en", "data-related" => "smilekus", :href => "https://twitter.com/share"} Tweet
-	.fb-share-button.social_button{"data-href" => "#{request.original_url}", "data-type" => "box_count"}
+	%a.twitter-share-button.social_button{"data-count" => "vertical", "data-text" => "#{@story.title} number #{@ku.number_in_story} by #{@ku.author_name}", "data-via" => "smilekus", "data-lang" => "en", "data-related" => "smilekus", :href => "https://twitter.com/share"} Tweet
+	.fb-share-button{"data-href" => "#{request.original_url}", "data-type" => "box_count"}
