--- a/app/views/kus/_social_buttons.html.haml
+++ b/app/views/kus/_social_buttons.html.haml
@@ -1,3 +1,7 @@
-.row-fluid
-	%a.twitter-share-button.social_button{"data-count" => "vertical", "data-text" => "#{@story.title} number #{@ku.number_in_story} by #{@ku.author_name}", "data-via" => "smilekus", "data-lang" => "en", "data-related" => "smilekus", :href => "https://twitter.com/share"} Tweet
-	.fb-share-button{"data-href" => "#{request.original_url}", "data-type" => "box_count"}
+.row-fluid.social_bar
+	%div.social_button
+		%a.twitter-share-button{"data-count" => "vertical", "data-text" => "#{@story.title} number #{@ku.number_in_story} by #{@ku.author_name}", "data-via" => "smilekus", "data-lang" => "en", "data-related" => "smilekus", :href => "https://twitter.com/share"} Tweet
+	%div.social_button
+		.fb-share-button{"data-href" => "http://www.yahoo.com", "data-type" => "box_count"}
+	%div.social_button
+		.g-plusone{"data-annotation" => "bubble", "data-size" => "tall"}
