--- a/app/views/posts/_sidebar.html.haml
+++ b/app/views/posts/_sidebar.html.haml
@@ -1,13 +1,16 @@
 .row-fluid
-	.span10.offset1
+	.span8.offset2
 		%h2 What is Smileku?
-		.p Laboris Shoreditch mollit, ullamco sustainable +1 squid Intelligentsia. Tempor art party squid locavore narwhal aliqua flexitarian gluten-free. Bitters magna cornhole authentic.
+		.p We're a community of writers dedicated to creativity and the art of storytelling. Writers on Smileku collaborate on communal stories.  We challenge each other to grow as writers, and strive to write great stories.  
 		%br
-		.p Chillwave pariatur Cosby sweater occaecat hella. Officia lo-fi gentrify, PBR&B excepteur before they sold out McSweeney's bespoke aesthetic exercitation Wes Anderson aliqua. Odd Future street art PBR&B, banh mi Wes Anderson whatever selvage yr irony butcher Intelligentsia.
+		.p Smileku is open to writers of all background.  If this sounds like fun, we hope you'll join us.
 		%br
 		.row
 			.span8.offset2
-				= link_to "Join the community!", registration_path, class: "btn btn-warning btn-block"
+				- if logged_in?
+					= link_to "Start a story!", new_story_path, class: "btn btn-warning btn-block"
+				- else
+					= link_to "Join the community!", registration_path, class: "btn btn-warning btn-block"
 		%br
 		.center
 			= render 'layouts/twitter_follow'
