--- a/app/views/posts/_sidebar.html.haml
+++ b/app/views/posts/_sidebar.html.haml
@@ -1,15 +1,22 @@
 .row-fluid
 	.span8.offset2
-		%h2 What is Smileku?
-		.p We're a community of writers dedicated to creativity and the art of storytelling. Writers on Smileku collaborate on communal stories.  We challenge each other to grow as writers, and strive to write great stories.  
-		%br
-		.p Smileku is open to writers of all background.  If this sounds like fun, we hope you'll join us.
-		%br
-		.row
-			.span8.offset2
-				- if logged_in?
+		- if logged_in?
+			%h2= "Hey #{current_user.username},"
+			.p As the saying goes, writing is 1% inspiration and 99% perspiration.  You've come here, sat down and started thinking about writing.  It's a good start...
+			%br
+			.p But we're here to push you further.  Stop thinking about writing and start doing!
+			%br
+			.row
+				.span8.offset2
 					= link_to "Start a story!", new_story_path, class: "btn btn-warning btn-block"
-				- else
+		- else
+			%h2 What is Smileku?
+			.p We're a community of writers dedicated to growing our creativity. Writers on Smileku collaborate on stories, challenging each other to think on our feet and write great stories.  
+			%br
+			.p Smileku is open to writers of all background.  If this sounds like fun, join us!
+			%br
+			.row
+				.span8.offset2
 					= link_to "Join the community!", registration_path, class: "btn btn-warning btn-block"
 		%br
 		.center
