--- a/app/views/posts/_sidebar.html.haml
+++ b/app/views/posts/_sidebar.html.haml
@@ -2,9 +2,9 @@
 	.span8.offset2
 		- if logged_in?
 			%h2= "Hey #{current_user.username},"
-			.p As the saying goes, writing is 1% inspiration and 99% perspiration.  You've come here, sat down and started thinking about writing.  It's a good start...
+			.p As the saying goes, writing is 1% inspiration and 99% perspiration.  You're here, sitting down and thinking about writing.  It's a good start...
 			%br
-			.p But we're here to push you further.  Stop thinking about writing and start doing!
+			.p But you can do so much more.  Stop thinking about writing and start doing!
 			%br
 			.row
 				.span8.offset2
