small copy update

--- a/app/views/posts/_sidebar.html.haml
+++ b/app/views/posts/_sidebar.html.haml
@@ -11,7 +11,7 @@
 					= link_to "Start a story!", new_story_path, class: "btn btn-warning btn-block"
 		- else
 			%h2 What is Smileku?
-			.p We're a community of writers dedicated to growing our creativity. Writers on Smileku collaborate on stories, challenging each other to think on our feet and write great stories.  
+			.p We're a community of writers dedicated to growing creatively. Writers on Smileku collaborate on stories, challenging each other to think on our feet and write great stories.  
 			%br
 			.p Smileku is open to writers of all background.  If this sounds like fun, join us!
 			%br
