post show metatags

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,3 +1,4 @@
+- meta :title => "#{@post.title} - Smileku blog", :description => "#{@post.text.truncate(250)}"
 .container
 	.row-fluid
 		.span6.offset1
