--- a/app/assets/stylesheets/front_page.css.scss
+++ b/app/assets/stylesheets/front_page.css.scss
@@ -32,12 +32,8 @@ body.front-page {
   background: url('Hubble_Mystic_Mountain_2.jpg') repeat scroll center center transparent;
 }
 
-.front-left {
-  padding-top: 50px;
-}
-
 .front-left > h1 {
-  color: #FFFFFF;
+  color: #000000;
   padding-left: 45px;
 }
 
