--- a/app/assets/stylesheets/front_page.css.scss
+++ b/app/assets/stylesheets/front_page.css.scss
@@ -25,13 +25,6 @@ body.front-page {
   padding-top: 45px;
 }
 
-.jumbotron {
-	margin-top: -19px;
-  min-height: 660px;
-  width: 100%;
-  background: url('Hubble_Mystic_Mountain_2.jpg') repeat scroll center center transparent;
-}
-
 .front-left > h1 {
   color: #000000;
   padding-left: 45px;
@@ -46,4 +39,10 @@ body.front-page {
 .about-block {
 	font-size: 145%;
 	line-height: 1.3em;
+}
+
+.front-post {
+  max-width: 250px;
+  padding-right: 18px;
+  float: left;
 }
