--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -33,7 +33,7 @@
       .row-fluid
         .span12
           .span8
-            %a= link_to('About', '/front#about') + " &bull;".html_safe
+            %a= link_to('About', faq_path) + " &bull;".html_safe
             %a= link_to('Blog', '/posts') + " &bull;".html_safe
             %a= link_to('Terms', '#') + " &bull;".html_safe
             %a= link_to('Contact', '/contact')
