--- a/app/views/statics/front.html.haml
+++ b/app/views/statics/front.html.haml
@@ -4,7 +4,7 @@
 			%h1.giant Smileku
 			%br
 			%h1 Something giant is happening right here.  Be part of a group of avante garde writers collaborating on stories.
-			%h3.pull-right= link_to "Learn more >", '#'
+			%h4.pull-right= link_to "Learn more >", faq_path
 		.front-right.span4.offset1
 			- if logged_in?
 				= link_to "Start a story", new_story_path, class: "btn btn-large btn-block"
@@ -21,12 +21,13 @@
 					%p= link_to "#{story.truncated_title} by #{story.user.username}", story_path(story)
 		%h1 Recent articles
 		.row-fluid
-			- 5.times do
-				.story.span2
-					= link_to "", nil do
-						%img(src="./public/public/tmp/uploads/the-little-thumb.jpg")
-					%p= link_to "Three ways to write a story", "#"
+			- @posts.each do |post|
+				.front-post
+					= link_to image_tag("#{post.mrec}"), post_path(post)
 	%hr
 	.row-fluid.center
-		%h1 Sound like fun?
-		= link_to "Sign up now", registration_path, class: "btn btn-info btn-large"
+		- if logged_in?
+			= link_to "Start a story", new_story_path, class: "btn btn-large btn-info"
+		- else
+			%h1 Sound like fun?
+			= link_to "Sign up now", registration_path, class: "btn btn-info btn-large"
