centered front page content

--- a/app/assets/stylesheets/front_page.css.scss
+++ b/app/assets/stylesheets/front_page.css.scss
@@ -41,6 +41,10 @@ body.front-page {
 	line-height: 1.3em;
 }
 
+.image-center {
+  margin: 0 auto;
+}
+
 .front-post {
   max-width: 250px;
   padding-right: 15px;
