front css tweaks

--- a/app/views/statics/front.html.haml
+++ b/app/views/statics/front.html.haml
@@ -13,7 +13,7 @@
 				= link_to "Login", login_path, class: "btn btn-large btn-block"
 	%hr
 	.row-fluid
-		.span10#content-margin
+		#content-margin
 			%h1 Stories being written
 			.row-fluid
 				- @stories.each do |story|
