home page start story cta

--- a/app/assets/stylesheets/home_page.css.scss
+++ b/app/assets/stylesheets/home_page.css.scss
@@ -24,3 +24,9 @@ li.activities > a {
 	padding-bottom: 5px;
 	text-align: center;
 }
+
+.start_a_story {
+	text-align: center;
+	font-family: monospace;
+	background-color: #FEFE52;
+}
