front page typo

--- a/app/views/statics/front.html.haml
+++ b/app/views/statics/front.html.haml
@@ -14,7 +14,7 @@
 	%hr
 	.row-fluid
 		#content-margin
-			%h1 Stories bring written
+			%h1 Stories being written
 			.row-fluid
 				- @stories.each do |story|
 					.story
