added GA tracking to front layout

--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -26,5 +26,7 @@
     <footer>
       <%= render 'layouts/footer' %>
     </footer>
+    <%= render 'layouts/ga' if Rails.env.production? %>
+    <%= render 'layouts/social_scripts' %>
   </body>
-</html>
+</html> 
