--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -34,7 +34,7 @@
         .span12
           .span8
             %a= link_to('About', faq_path) + " &bull;".html_safe
-            %a= link_to('Blog', '/posts') + " &bull;".html_safe
+            %a= link_to('Writing Tips', posts_path) + " &bull;".html_safe
             %a= link_to('Terms', '#') + " &bull;".html_safe
             %a= link_to('Contact', '/contact')
           .span4
