minor about page change

--- a/app/views/statics/faq.html.haml
+++ b/app/views/statics/faq.html.haml
@@ -15,7 +15,7 @@
 				%br
 				%li 
 					%h1 How do I start?
-					%p= "Our writing community is free and open to join.  All that's required is an active email and password.  #{link_to 'Sign up here', registration_path}.".html_safe
+					%p= "Our writing community is free and open to join.  All that's required is a unique username, an active email and password.  #{link_to 'Sign up here', registration_path}.".html_safe
 				%br
 				%li 
 					%h1 More questions?
