ku show updates 1

--- a/app/assets/stylesheets/home_page.css.scss
+++ b/app/assets/stylesheets/home_page.css.scss
@@ -30,3 +30,9 @@ li.activities > a {
 	font-family: monospace;
 	background-color: #FEFE52;
 }
+
+.random_write {
+	text-align: center;
+	font-family: monospace;
+	background-color: #61D7FE;
+}
