--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,4 +1,3 @@
 = form_for [@ku, @comment] do |f|
-	=f.label :body, "Leave a comment:"
-	=f.text_area :body, class: "span7", rows: 5
-	=f.submit "leave a comment", class: "btn"
+	=f.text_area :body, class: "span4", rows: 3
+	=f.submit "leave a comment", class: "btn pull-right"
