--- a/app/views/kus/show.html.haml
+++ b/app/views/kus/show.html.haml
@@ -8,6 +8,12 @@
 				%h2= @story.title
 				= render 'layouts/social_buttons', twitter_message: "#{@story.title} number #{@ku.number_in_story} by #{@ku.author_name}"
 				%p.bold= link_to "<< Back to full story", story_path(@story)
+			.row.span4
+				= render "comments/form"
+				- @comments.each do |c|
+					%hr.row
+					%p= c.filter(:body).html_safe
+					%p.pull-right= "#{time_ago_in_words(c.created_at)} ago by #{link_to c.user.username, user_path(c.user)}".html_safe
 		.span7
 			.row
 				%h3
@@ -24,10 +30,9 @@
 					%h4= "Score: #{@ku.vote_count}"
 				.span4
 					= render "navigation"
-			%br
 			.row
-				= render "comments/form"
-				- @comments.each do |c|
-					%hr.row
-					%p= c.filter(:body).html_safe
-					%p.pull-right= "#{time_ago_in_words(c.created_at)} ago by #{link_to c.user.username, user_path(c.user)}".html_safe
+				.start_a_story{:onclick => "window.location='#{new_story_ku_path(story_id: @story.id, parent_id: @ku.id)}';", :style => "cursor: pointer;"}
+					%h3 Add to this story
+				- if @ku.parent.present?
+					.random_write{:onclick => "window.location='#{new_story_ku_path(story_id: @story.id, parent_id: @ku.parent.id)}';", :style => "cursor: pointer;"}
+						%h3 Write a new version
