--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,3 +1,4 @@
-= form_for [@ku, @comment] do |f|
-	=f.text_area :body, class: "span4", rows: 3
-	=f.submit "leave a comment", class: "btn pull-right"
+.row_fluid
+	= form_for [@ku, @comment] do |f|
+		=f.text_area :body, class: "span4", rows: 3
+		=f.submit "leave a comment", class: "btn pull-right"
