--- a/app/views/kus/show.html.haml
+++ b/app/views/kus/show.html.haml
@@ -10,10 +10,8 @@
 				%p.bold= link_to "<< Back to full story", story_path(@story)
 			.row.span4
 				= render "comments/form"
-				- @comments.each do |c|
-					%hr.row
-					%p= c.filter(:body).html_safe
-					%p.pull-right= "#{time_ago_in_words(c.created_at)} ago by #{link_to c.user.username, user_path(c.user)}".html_safe
+				%br
+				= render "comments"
 		.span7
 			.row
 				= link_to image_tag(@ku.user.photo, class: 'profile_thumb'), user_path(@ku.user)
